# nomadcfg

./: .gitignore  Cargo.toml  README.md  config.jsonnet  deny.toml  rustfmt.toml
.github/workflows/: push.yaml
examplebin/: Cargo.toml  config.jsonnet
examplebin/src/: main.rs
jscfg/: Cargo.toml
jscfg/src/: main.rs
nomadapi/: Cargo.toml  go.mod  go.sum  main.go
nomadapi/src/: lib.rs
nomadcfg/: Cargo.toml  jobspec.jsonnet  nomad.libsonnet
nomadcfg/src/: error.rs  main.rs
serde_jrsonnet/: Cargo.toml
serde_jrsonnet/examples/: simple.jsonnet  simple.rs
serde_jrsonnet/src/: error.rs  lib.rs
src/: deserializer.rs  error.rs  main.rs  nomadapi.rs
