[package]
name = "nomadcfg"
version = "0.0.0"
edition = "2021"
authors = ["Folke B."]
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
jrsonnet-evaluator = { version = "0.5.0-pre9", features = ["exp-preserve-order"] }
jrsonnet-parser = { version = "0.5.0-pre9" }
jrsonnet-stdlib = { version = "0.5.0-pre9", features = ["exp-preserve-order"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "1"
toml = { version = "0.7", features = ["preserve_order"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
strip = true
