[package]
name = "nomadcfg"
version = "0.0.3"
edition = "2021"
description = "A CLI tool for defining HashiCorp Nomad job specs in jsonnet."
authors = ["Folke B."]
license = "Apache-2.0"
repository = "https://github.com/cloneable/nomadcfg"
categories = ["command-line-utilities"]
keywords = ["nomad", "jsonnet"]
exclude = [".gitignore", ".github", "nomadapi", "deny.toml", "target"]

[dependencies]
clap = { version = "4", features = ["derive"] }
indexmap = { version = "1", features = ["serde"] }
jrsonnet-evaluator = { version = "0.5.0-pre9", features = ["exp-preserve-order"] }
jrsonnet-parser = { version = "0.5.0-pre9" }
jrsonnet-stdlib = { version = "0.5.0-pre9", features = ["exp-preserve-order"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "1"
toml = { version = "0.7", features = ["preserve_order"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
