[package]
name = "nomadcfg"
version = "0.0.3"
edition = "2021"
description = "A CLI tool for defining HashiCorp Nomad job specs in jsonnet."
authors = ["Folke B."]
license = "Apache-2.0"
repository = "https://github.com/cloneable/nomadcfg"
categories = ["command-line-utilities"]
keywords = ["nomad", "jsonnet"]
exclude = [".gitignore", ".github", "nomadapi", "deny.toml", "target"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
diff = "0.1"
indexmap = { version = "1", features = ["serde"] }
jrsonnet-evaluator = { version = "0.5.0-pre9", features = ["exp-preserve-order"] }
jrsonnet-parser = { version = "0.5.0-pre9" }
jrsonnet-stdlib = { version = "0.5.0-pre9", features = ["exp-preserve-order"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "rustls-pemfile", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
toml = "0.7"
url = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
