[package]
name = "nomadapi"
version = "0.0.0"
edition = "2021"

[dependencies]
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
futures-core = "0.3"
progenitor-client = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_urlencoded = "0.7"
