[package]
name = "nomadcfg"
version = "0.0.0"
edition = "2021"
authors = ["Folke B."]
license = "Apache-2.0"

[dependencies]
nomadapi = { path = "../nomadapi" }
serde_jrsonnet = { path = "../serde_jrsonnet" }
clap = { version = "4.3", features = ["derive"] }
jrsonnet-evaluator = { git = "https://github.com/CertainLach/jrsonnet", tag = "v0.5.0-pre9-test", default-features = false, features = ["exp-preserve-order"] }
jrsonnet-parser = { git = "https://github.com/CertainLach/jrsonnet", tag = "v0.5.0-pre9-test", default-features = false }
jrsonnet-stdlib = { git = "https://github.com/CertainLach/jrsonnet", tag = "v0.5.0-pre9-test", default-features = false, features = ["exp-preserve-order"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
