[package]
name = "nomadcfg"
version = "0.0.0"
edition = "2021"
authors = ["Folke B."]
license = "Apache-2.0"

[dependencies]
serde_jrsonnet = { path = "../serde_jrsonnet" }

chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
jrsonnet-evaluator = { git = "https://github.com/CertainLach/jrsonnet", tag = "v0.5.0-pre9-test", features = ["exp-preserve-order"] }
jrsonnet-parser = { git = "https://github.com/CertainLach/jrsonnet", tag = "v0.5.0-pre9-test" }
jrsonnet-stdlib = { git = "https://github.com/CertainLach/jrsonnet", tag = "v0.5.0-pre9-test", features = ["exp-preserve-order"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "1"
toml = { version = "0.7", features = ["preserve_order"] }
